--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script defer src="src/adapter.js"></script>
+      <script defer src="src/index.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="src/index.css">
@@ -13,6 +15,7 @@
   <h1>My favorite quotes:</h1>
   <div>
     <ul id="quote-list">
+      
     </ul>
   </div>
   <hr>
@@ -29,6 +32,5 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-  <script src="src/index.js"></script>
 </body>
 </html>
